# anomaly-detection-with-keras

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
autoencoder_project/: main.py
models/: best_autoencoder.keras  best_cnn_autoencoder.keras  cnn_autoencoder.keras  encoder.keras  scaler.pkl
